# libft build rules

cc_library(
    name = "libft",
    srcs = [
        ":get_next_line",
        ":libft_base",
    ],
    hdrs = [
        "includes/commontypes.h",
        "includes/libft.h",
    ],
    strip_include_prefix = "//github.com/riking/libft/includes/",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ft_printf",
    hdrs = [
        "includes/ft_printf.h",
    ],
    strip_include_prefix = "//github.com/riking/libft/includes/",
    visibility = ["//visibility:public"],
    deps = ["//github.com/riking/libft/ft_printf"],
)

cc_library(
    name = "libft_base",
    srcs = [
        "ft_ary_append.c",
        "ft_ary_clear.c",
        "ft_ary_clone.c",
        "ft_ary_create.c",
        "ft_ary_destroy.c",
        "ft_ary_destroy2.c",
        "ft_ary_foreach.c",
        "ft_ary_get.c",
        "ft_ary_grow.c",
        "ft_ary_insert.c",
        "ft_ary_poplast.c",
        "ft_ary_remove.c",
        "ft_ary_remove_mul.c",
        "ft_ary_set.c",
        "ft_ary_sort.c",
        "ft_ary_swap.c",
        "ft_ary_viewof.c",
        "ft_atoi.c",
        "ft_basename.c",
        "ft_bzero.c",
        "ft_isalnum.c",
        "ft_isalpha.c",
        "ft_isascii.c",
        "ft_isdigit.c",
        "ft_isprint.c",
        "ft_itoa.c",
        "ft_lstadd.c",
        "ft_lstdel.c",
        "ft_lstdelone.c",
        "ft_lstiter.c",
        "ft_lstmap.c",
        "ft_lstnew.c",
        "ft_lstpop.c",
        "ft_memalloc.c",
        "ft_memccpy.c",
        "ft_memchr.c",
        "ft_memcmp.c",
        "ft_memcpy.c",
        "ft_memdel.c",
        "ft_memdup.c",
        "ft_memmove.c",
        "ft_memset.c",
        "ft_progname.c",
        "ft_putchar.c",
        "ft_putchar_fd.c",
        "ft_putchar_uni.c",
        "ft_putchar_uni_fd.c",
        "ft_putendl.c",
        "ft_putendl_fd.c",
        "ft_putnbr.c",
        "ft_putnbr_fd.c",
        "ft_putstr.c",
        "ft_putstr_fd.c",
        "ft_strcat.c",
        "ft_strchr.c",
        "ft_strclr.c",
        "ft_strcmp.c",
        "ft_strcpy.c",
        "ft_strdel.c",
        "ft_strdup.c",
        "ft_strequ.c",
        "ft_striter.c",
        "ft_striteri.c",
        "ft_strjoin.c",
        "ft_strlcat.c",
        "ft_strlen.c",
        "ft_strmap.c",
        "ft_strmapi.c",
        "ft_strncat.c",
        "ft_strncmp.c",
        "ft_strncpy.c",
        "ft_strnequ.c",
        "ft_strnew.c",
        "ft_strnstr.c",
        "ft_strrchr.c",
        "ft_strsplit.c",
        "ft_strstr.c",
        "ft_strsub.c",
        "ft_strtab_destroy.c",
        "ft_strtrim.c",
        "ft_tolower.c",
        "ft_toupper.c",
        "libft.h",
    ],
    hdrs = [
        "includes/libft.h",
    ],
    strip_include_prefix = "//github.com/riking/libft/includes/",
    visibility = ["//visibility:private"],
)

cc_library(
    name = "get_next_line",
    srcs = [
        "get_next_char.c",
        "get_next_line.c",
        "get_next_line_private.h",
    ],
    deps = [":libft_base"],
)
